Fixes for spacing on small screens

--- a/portfolio/portfolio.css
+++ b/portfolio/portfolio.css
@@ -44,7 +44,7 @@ nav a {
     text-align: center;
     color: #fff;
     display: block; 
-    padding: 20px 30px;
+    padding: 4px 15px;
 }
 
 nav a:hover {
@@ -52,7 +52,10 @@ nav a:hover {
 }
 
 /* Flex styles */
-@media screen and (min-width: 675px) {
+@media screen and (min-width: 420px) {
+    nav a {
+        padding: 8px 15px;
+    }
     nav ul {
         display: flex;
     }
@@ -88,14 +91,17 @@ nav a:hover {
 }
 
 /* Keep text on one line, on smaller screens */
-@media screen and (max-width: 533px) {
+@media screen and (max-width: 630px) {
     .welcome-section {
-        font-size: 2em;
+        font-size: 1.8em;
     }
 }
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 500px) {
     .welcome-section {
-        font-size: 1.5em;
+        font-size: 1.3em;
+    }
+    .welcome-section code {
+        padding: 5px;
     }
 }
 
@@ -106,8 +112,7 @@ nav a:hover {
 */
 .about {
     background: #0B3C5D;
-    padding-top: 80px;
-    padding-bottom: 80px;
+    padding: 80px 0;
 }
 
 .about .container {
@@ -117,7 +122,7 @@ nav a:hover {
 
 .about p {
     font-size: 1.2em;
-    padding-top: 3px;
+    padding: 10px 15px;
 }
 
 .about .fa-handshake-o {
@@ -136,6 +141,12 @@ nav a:hover {
 
 .about a {
     color: #fff;
+}
+
+@media screen and (max-width: 500px) {
+    .about .meet-you {
+        display: block;
+    }
 }
 
 /*
@@ -158,17 +169,16 @@ nav a:hover {
 }
 
 .projects .project {
-  background: #328CC1;
-  border: 3px solid #0B3C5D;
-  flex-basis: 400px;
-  height: 260px;
-  margin: 20px 20px;
-  border-radius: 10px;
+    background: #328CC1;
+    border: 3px solid #0B3C5D;
+    flex-basis: 400px;
+    height: 260px;
+    margin: 20px 20px;
+    border-radius: 10px;
 }
 
  .projects h2 {
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding: 30px;
     display: block;
     font-weight: normal;
     font-size: 2em;
@@ -180,6 +190,11 @@ nav a:hover {
     color: #fff;
     font-size: 1.1em;
     font-weight: normal;
+}
+
+.project a:hover,
+.project h3:hover {
+    text-decoration: underline;
 }
 
 .project .fa {
